# sony-fe-db

./: README.md  analysis.ipynb  dashboard.py  lens-db.ipynb  lens-db.py  models.py  parse-data.py  pyproject.toml  sony.py
.github/workflows/: weekly_scrape.yml
archive/: README.md  Sony FE lens list by phillipreeve.net.xlsx  SonyFE-Database.xlsx  sony-lenses-original.py  sony.pbix
archive/spiderSony/: scrapy.cfg  sonyItems.csv  sonyItems.json
archive/spiderSony/spiderSony/: items.py  middlewares.py  pipelines.py  settings.py
archive/spiderSony/spiderSony/spiders/: Users:.fileloc  sony-lenses.py
config/: features.yml
notebooks/: lens-db.ipynb
outputs/: lens.parquet
source/: Sony E system _ LENS-DB.COM.html  Sony FE 50mm F_1.4 GM [SEL50F14GM] _ LENS-DB.COM.html  single-lens.html  sony-lens.html  sony-lenses.csv  sony-lenses.xml
source/Sony E system _ LENS-DB.COM_files/: anti-spam-pro.js  f.txt  js  uikit.css  watermark.js
source/Sony FE 50mm F_1.4 GM [SEL50F14GM] _ LENS-DB.COM_files/: f(1).txt  js  louis-george-cafe.css  script.js  style.css
