[tool.poetry]
name = "sony-fe-db"
version = "0.1.0"
description = ""
authors = ["Nam Tonthat <n.nam.tonthat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
bs4 = "^0.0.1"
black = "^23.3.0"
polars = "^0.16.18"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
numpy = "^1.24.2"
streamlit = "^1.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
